apps/yojimbo/homepage/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage
  annotations:
    gethomepage.dev/description: Homepage
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Homelab
    gethomepage.dev/icon: homepage.png
    gethomepage.dev/name: Homepage
    gethomepage.dev/statusStyle: dot
spec:
  hostnames:
    - home.neokube.net
  parentRefs:
    - name: gateway
      namespace: kube-system
      sectionName: https
